--- a/package.json
+++ b/package.json
@@ -13,14 +13,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/ejs": "^3.1.5",
+    "@types/nodemailer": "^6.4.15",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "mongoose": "^8.4.4"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.4",
+    "nodemailer": "^6.9.14",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.14.9",
+    "@types/validator": "^13.12.0",
+    "install": "^0.13.0",
     "nodemon": "^3.1.4",
+    "npm": "^10.8.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.2"
   }
