--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.2.6",
     "@tanstack/react-query": "^5.51.3",
     "axios": "^1.7.2",
+    "firebase": "^10.12.4",
     "framer-motion": "^11.2.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
