--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "firebase": "^10.12.4",
     "framer-motion": "^11.2.12",
     "react": "^18.3.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
