--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "i18next": "^23.12.2",
+    "i18next-fs-backend": "^2.3.1",
+    "i18next-http-middleware": "^3.6.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
     "nanoid": "^5.0.7",
