--- a/client/package.json
+++ b/client/package.json
@@ -25,8 +25,7 @@
     "react-lazy-load-image-component": "^1.6.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
-    "redux-persist": "^6.0.0",
-    "tailwind-scrollbar": "^3.1.0"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
