--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.2",
     "firebase": "^10.12.4",
     "framer-motion": "^11.2.12",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
@@ -27,7 +28,8 @@
     "react-lazy-load-image-component": "^1.6.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
