--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/uuid": "^10.0.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
@@ -32,6 +33,7 @@
     "nanoid": "^5.0.7",
     "nodemailer": "^6.9.14",
     "shortid": "^2.2.16",
+    "socket.io": "^4.7.5",
     "uuid": "^10.0.0",
     "validator": "^13.12.0"
   },
