--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -24,5 +24,5 @@
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": false
   },
-  "include": ["src"]
+  "include": ["src", "src/vite-env.d.ts", "src/custom.d.ts"]
 }
