--- a/tsconfig.json
+++ b/tsconfig.json
@@ -105,6 +105,6 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "include": ["api/**/*", "src/vite-env.d.ts"],
+  "include": ["api/**/*"],
   "exclude": ["node_modules"]
 }
