--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
     "@tanstack/react-query": "^5.51.3",
+    "@vitejs/plugin-react": "^4.3.1",
     "axios": "^1.7.2",
     "firebase": "^10.12.4",
     "framer-motion": "^11.2.12",
@@ -32,6 +33,7 @@
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
+    "@types/node": "^22.3.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-lazy-load-image-component": "^1.6.4",
