--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node api/index.ts",
+    "start": "node ./dist/index.js",
     "dev": "nodemon api/index.ts",
     "build": "npm install && npm install --prefix client && npm run build --prefix client"
   },
