--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "firebase": "^10.12.4",
     "framer-motion": "^11.2.12",
     "moment": "^2.30.1",
+    "movie-quotes": "file:..",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
