--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build-server": "tsc",
     "build-client": "npm run build --prefix client",
     "build": "npm run install-deps && npm run build-server && npm run build-client",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "dev": "nodemon api/index.ts"
   },
   "keywords": [],
   "author": "",
