--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "install-deps": "npm install && npm install --prefix client",
     "build-server": "tsc",
     "build-client": "npm run build --prefix client",
-    "build": "npm run install-deps && npm run build-server && npm run build-client",
+    "copy-views": "node copy-views.js",
+    "build": "npm run install-deps && npm run build-server && npm run build-client && npm run copy-views",
     "start": "node dist/index.js",
     "dev": "nodemon api/index.ts"
   },
@@ -28,6 +29,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "fs-extra": "^11.2.0",
     "i18next": "^23.12.2",
     "i18next-fs-backend": "^2.3.1",
     "i18next-http-middleware": "^3.6.0",
