--- a/client/package.json
+++ b/client/package.json
@@ -31,9 +31,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "redux-persist": "^6.0.0",
-    "socket.io-client": "^4.7.5"
-  },
-  "devDependencies": {
+    "socket.io-client": "^4.7.5",
     "@types/node": "^22.3.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
