--- a/package.json
+++ b/package.json
@@ -40,9 +40,7 @@
     "shortid": "^2.2.16",
     "socket.io": "^4.7.5",
     "uuid": "^10.0.0",
-    "validator": "^13.12.0"
-  },
-  "devDependencies": {
+    "validator": "^13.12.0",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
